Fix: Update CORS origins for Vercel production