@@ -24,6 +24,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -100,25 +101,14 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // ✅ Use setAllowedOriginPatterns (REQUIRED for wildcards like *)
-        configuration.setAllowedOriginPatterns(List.of(
+        configuration.setAllowedOrigins(Arrays.asList(
+                frontendUrl,
                 "https://zastra-fullstack-developer-eindproj.vercel.app",
-                "https://zastra-fullstack-developer-eindproject.vercel.app",
-                "https://zastra-fullstack-developer-*.vercel.app",
-                "http://localhost:3000",
-                "http://localhost:5173"
+                "https://zastra-fullstack-developer-eindproject.vercel.app"
         ));
-
-        // ✅ Allow all standard methods
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-
-        // ✅ Use "*" to allow all headers for maximum compatibility
-        configuration.setAllowedHeaders(List.of("*"));
-
-        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
